--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node":"16.14.2"
+    "node":"16.x"
   },
   "scripts": {
     "start":"node index.js",
